--- a/public/index.html
+++ b/public/index.html
@@ -950,15 +950,16 @@
     <div class="pt-2 justify-content-center prose prose-slate dark:prose-invert">
       <div class="bio-text" >
         <h2 id="about-me">About Me</h2>
-<p>My name is Woojin, but I go by Arthur in English. I&rsquo;m currently a senior at <a href="https://www.kaist.ac.kr/en/" target="_blank" rel="noopener">KAIST</a>, double majoring in Data and Operational Analytics (designated major in a department of Trandisciplinary Studies) and Mathematical Science, minoring computer science (CS).
-My research interest lies in the intersection of</p>
+<p>Hello, my name is Woojin, but I go by Arthur in English. I’m a senior at <a href="https://www.kaist.ac.kr/en/" target="_blank" rel="noopener">KAIST</a>, double majoring in Data and Operational Analytics and Mathematical Science, with a minor in Computer Science.</p>
+<p>My research interests lie at the intersection of operations research and machine learning, with a focus on developing data-driven decision-making algorithms to support better decision-making.</p>
+<p>During my doctoral studies, I aim to build a strong foundation in machine learning, graph theory, causal inference, and statistics, which I believe are essential for addressing social problems.</p>
 
       </div>
     </div>
     
 
     
-    <a href="uploads/resume.pdf" target="_blank" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-primary-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+    <a href="uploads/CV__Woojin_Chae_.pdf" target="_blank" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-primary-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
       <path d="M14.707 7.793a1 1 0 0 0-1.414 0L11 10.086V1.5a1 1 0 0 0-2 0v8.586L6.707 7.793a1 1 0 1 0-1.414 1.414l4 4a1 1 0 0 0 1.416 0l4-4a1 1 0 0 0-.002-1.414Z"/>
       <path d="M18 12h-2.55l-2.975 2.975a3.5 3.5 0 0 1-4.95 0L4.55 12H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2Zm-3 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"/>
     </svg> Download CV</a>
